force-app/main/default/objects/Opportunity__c/fields/Warranty_Card_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Card_Received_Date__c</fullName>
    <label>Warranty Card Received Date</label>
    <type>Date</type>
</CustomField>