force-app/main/default/objects/Opportunity__c/fields/Warranty_Docs_Hard_Copy_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Docs_Hard_Copy_Received_Date__c</fullName>
    <label>Warranty Docs Hard Copy Received Date</label>
    <type>Date</type>
</CustomField>