force-app/main/default/objects/Opportunity__c/fields/Warranty_Documents_Checked__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Documents_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Documents Checked</label>
    <type>Checkbox</type>
</CustomField>