force-app/main/default/objects/Opportunity__c/fields/Warranty_Documents_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Documents_Received_Date__c</fullName>
    <label>Warranty Documents Uploaded Date</label>
    <type>Date</type>
</CustomField>