force-app/main/default/objects/Opportunity__c/fields/Warranty_Done_Hard_Copy__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Done_Hard_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If all warranty documents hard copies are already put together and filed in H.O. (they will not be uploaded to salesforce)</description>
    <label>Warranty Done (Hard Copy)</label>
    <type>Checkbox</type>
</CustomField>