force-app/main/default/objects/Opportunity__c/fields/Warranty_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case the fabric is being used for other purposes (not pond lining). The explanation is required in the Warranty Not Needed Reason field.</description>
    <inlineHelpText>Fill out the Warranty Not Needed Reason field too.</inlineHelpText>
    <label>Warranty Not Needed</label>
    <type>Checkbox</type>
</CustomField>