force-app/main/default/objects/Opportunity__c/fields/Warranty_Not_Needed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Not_Needed_Reason__c</fullName>
    <description>Reason for why we are not providing a warranty.</description>
    <inlineHelpText>Fill out the reason why the warranty is not needed.</inlineHelpText>
    <label>Warranty Not Needed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>