force-app/main/default/objects/Opportunity__c/fields/Warranty_umber__c.field-meta.xml
<CustomField>
    <fullName>Warranty_umber__c</fullName>
    <label>Warranty Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>