force-app/main/default/objects/Opportunity__c/recordTypes/Jalasanchay.recordType-meta.xml
<RecordType>
    <fullName>Jalasanchay</fullName>
    <active>true</active>
    <label>Jalasanchay</label>
</RecordType>