force-app/main/default/objects/Opportunity__c/recordTypes/Murughas.recordType-meta.xml
<RecordType>
    <fullName>Murughas</fullName>
    <active>true</active>
    <label>Retail Products</label>
</RecordType>