force-app/main/default/objects/Opportunity__c/validationRules/Dealer_Distributor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_Distributor_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
OR(
ISPICKVAL( Opportunity_Stage__c, &apos;Interested&apos;),
ISPICKVAL( Opportunity_Stage__c, &apos;Converted&apos;)
),
AND(ISBLANK(Dealer__c),ISBLANK(Distributor__c)),
FALSE
)</errorConditionFormula>
    <errorMessage>Please fill out the Dealer and Distributor for the product.</errorMessage>
</ValidationRule>