force-app/main/default/objects/Opportunity__c/validationRules/Dispatch_add_only_Interested_Farmers.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_add_only_Interested_Farmers</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Dispatch_Detail__c))
&amp;&amp; 
NOT(ISPICKVAL(Opportunity_Stage__c , &quot;Interested&quot;))
&amp;&amp;
ISCHANGED(Dispatch_Detail__c)</errorConditionFormula>
    <errorDisplayField>Dispatch_Detail__c</errorDisplayField>
    <errorMessage>Only Product Information in Interested Stage may be added to Dispatches!</errorMessage>
</ValidationRule>