force-app/main/default/objects/Opportunity__c/validationRules/Invoice_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Invoice_Number__c ))
,
NOT(REGEX(Invoice_Number__c ,&quot;^ST.*&quot;))
,
NOT(REGEX(Invoice_Number__c ,&quot;^PL.*&quot;))
,
NOT(REGEX(Invoice_Number__c ,&quot;AV[1-6]{1}[- /.]\\d{2}-\\d{2}[- /.]\\d{5}[- /.][0-99]{1,2}&quot;))
,
NOT(REGEX(Invoice_Number__c ,&quot;AV[1-6]{1}[- /.]\\d{2}-\\d{2}[- /.]\\d{5}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Invoice_Number__c</errorDisplayField>
    <errorMessage>If Invoice Date is Greater than Year 2019 Invoice Number Format should 
For example - &quot;AV1/21-22/12345&quot; OR for Rajasthan &quot;AV1/21-22/12345/1&quot;</errorMessage>
</ValidationRule>