force-app/main/default/objects/Opportunity__c/validationRules/Not_match_Dealer_with_Tehsils.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_match_Dealer_with_Tehsils</fullName>
    <active>true</active>
    <description>Not_match_Dealer_with_Tehsils</description>
    <errorConditionFormula>AND( Dealer__r.Name &lt;&gt; Dealer_with_Tehsil__r.Dealer__r.Name,Dealer_with_Tehsil__r.Dealer__r.Name &lt;&gt; Null)</errorConditionFormula>
    <errorMessage>Dealer With Tehsil and Dealer is not match.</errorMessage>
</ValidationRule>