force-app/main/default/objects/Opportunity__c/validationRules/Not_match_Dealer_with_Tehsils_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_match_Dealer_with_Tehsils_2</fullName>
    <active>false</active>
    <description>Not_match_Dealer_with_Tehsils_2</description>
    <errorConditionFormula>AND( Dealer_with_Tehsil__r.Tehsil_Name__r.Name  &lt;&gt;  Tehsil__c , Dealer_with_Tehsil__r.Tehsil_Name__r.Name  &lt;&gt; Null)</errorConditionFormula>
    <errorMessage>Dealer with Tehsil and Tehsil is not matched</errorMessage>
</ValidationRule>