force-app/main/default/objects/Opportunity__c/validationRules/Product_remove_dispatch_status_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_remove_dispatch_status_check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(Dispatch_Detail__c)))
&amp;&amp;
ISCHANGED(Dispatch_Detail__c)
&amp;&amp;
PRIORVALUE(Can_Edit_Dispatch__c) = FALSE</errorConditionFormula>
    <errorDisplayField>Dispatch_Detail__c</errorDisplayField>
    <errorMessage>Dispatch should be in submit for approval stage to remove product.</errorMessage>
</ValidationRule>