force-app/main/default/objects/Opportunity__c/validationRules/Qty_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_not_empty</fullName>
    <active>true</active>
    <description>Validation that checks that a PI being added to a dispatch does not have missing qty info</description>
    <errorConditionFormula>NOT( ISBLANK( Dispatch_Detail__c ) )  &amp;&amp;  ISBLANK( Pondliner_Size_Requested_Required_Sq_Mt__c )</errorConditionFormula>
    <errorMessage>Please enter qty before adding dispatch!</errorMessage>
</ValidationRule>