force-app/main/default/objects/Opportunity__c/validationRules/Quotation_Given_and_Quoted_Rate_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quotation_Given_and_Quoted_Rate_required</fullName>
    <active>true</active>
    <description>Making quotation related fields required once either is filled out.</description>
    <errorConditionFormula>AND(  Quotation_Given__c  , ISBLANK( Quote_Value__c ))</errorConditionFormula>
    <errorDisplayField>Quote_Value__c</errorDisplayField>
    <errorMessage>Please fill out quoted rate field if quotation has been given.</errorMessage>
</ValidationRule>