force-app/main/default/objects/Opportunity__c/validationRules/Tentative_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Tentative_date_required</fullName>
    <active>true</active>
    <description>Tentative date required if interest level is positive/negotiated</description>
    <errorConditionFormula>AND(
  OR(
  ISPICKVAL( Interest_Level_after_visit__c , &apos;Positive Feedback&apos;),
  ISPICKVAL( Interest_Level_after_visit__c , &apos;Rate Negotiation&apos;)
     ),
  ISBLANK( Tentative_Order_Confirmation_Date__c )
    )</errorConditionFormula>
    <errorDisplayField>Tentative_Order_Confirmation_Date__c</errorDisplayField>
    <errorMessage>Please enter the Tentative Order Confirmation Date if Interest level is Positive Feedback or Rate Negotiation</errorMessage>
</ValidationRule>