force-app/main/default/objects/Opportunity__c/validationRules/Warranty_Not_Needed_should_have_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_Not_Needed_should_have_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Warranty_Not_Needed__c, ISBLANK(Warranty_Not_Needed_Reason__c))</errorConditionFormula>
    <errorDisplayField>Warranty_Not_Needed__c</errorDisplayField>
    <errorMessage>Warranty Not Needed Reason must be filled out.</errorMessage>
</ValidationRule>