force-app/main/default/objects/Opportunity__c/listViews/All_Product_Information.listView-meta.xml
<ListView>
    <fullName>All_Product_Information</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>Jalasanchay_Product_Type__c</columns>
    <columns>Pondliner_Size_Requested_Required_Sq_Mt__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Dealer__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Information</label>
    <sharedTo>
        <roleAndSubordinates>Accounts</roleAndSubordinates>
    </sharedTo>
</ListView>