force-app/main/default/objects/Opportunity__c/listViews/Commercial.listView-meta.xml
<ListView>
    <fullName>Commercial</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>Jalasanchay_Product_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Pondliner_Size_Requested_Required_Sq_Mt__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>Commercial</label>
    <sharedTo>
        <group>Commercial_Group</group>
    </sharedTo>
</ListView>