force-app/main/default/objects/Opportunity__c/listViews/CRM.listView-meta.xml
<ListView>
    <fullName>CRM</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>District__c</columns>
    <columns>Jalasanchay_Product_Type__c</columns>
    <columns>Pondliner_Size_Requested_Required_Sq_Mt__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Installation_Date__c</columns>
    <columns>CRM_Call_Date__c</columns>
    <columns>CRM_Call_Farmer_Satisfied__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CRM_Call_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Installation_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>CRM</label>
    <sharedTo>
        <group>CRM_Group</group>
    </sharedTo>
</ListView>