force-app/main/default/objects/Opportunity__c/listViews/Interested.listView-meta.xml
<ListView>
    <fullName>Interested</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Jalasanchay_Product_Type__c</columns>
    <columns>Pondliner_Size_Requested_Required_Sq_Mt__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Dealer__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Interested</value>
    </filters>
    <label>Interested</label>
    <sharedTo>
        <group>HO_Sales_Group</group>
        <group>Sales_Group</group>
    </sharedTo>
</ListView>