force-app/main/default/objects/Opportunity__c/listViews/My_Product_Information.listView-meta.xml
<ListView>
    <fullName>My_Product_Information</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>Jalasanchay_Product_Type__c</columns>
    <columns>Pondliner_Size_Requested_Required_Sq_Mt__c</columns>
    <columns>Follow_up_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Product Information</label>
</ListView>