force-app/main/default/objects/Opportunity__c/listViews/Quality.listView-meta.xml
<ListView>
    <fullName>Quality</fullName>
    <columns>NAME</columns>
    <columns>Farmer_Name__c</columns>
    <columns>Tehsil__c</columns>
    <columns>District__c</columns>
    <columns>Material_Dispatch_Date__c</columns>
    <columns>Quality_person__c</columns>
    <columns>Installation_Date__c</columns>
    <columns>Post_Visit_Date__c</columns>
    <columns>Name_of_Operator__c</columns>
    <columns>Operator_machine_used__c</columns>
    <columns>Warranty_Documents_Received_Date__c</columns>
    <columns>Warranty_Card_Received_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>Material_Dispatch_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Quality Info</label>
    <sharedTo>
        <group>HO_Sales_Group</group>
        <group>Quality_Group</group>
    </sharedTo>
</ListView>